--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.2.5|^8.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
+        
         "guzzlehttp/guzzle": "^7.0",
         "intervention/image": "^2.5",
-        "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.1",
+        "laravel/framework": "^8.5",
+        "laravel/tinker": "^2.4",
+        "laravel/ui": "^3.4",
         "stevebauman/location": "^5.1"
+        
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
+        "mockery/mockery": "^1.4.1",
+        "nunomaduro/collision": "^5.1",
         "phpunit/phpunit": "^9.3"
     },
     "config": {
